--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <li><a href="index.html" class="header-link link">Контакты</a></li>
         </ul>
         <ul class="header-list2 list">
-            <li><a href="mailto:info@devstudio.com" class="header-link link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="header-link link">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="header-link2 link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="header-link2 link">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
@@ -81,7 +81,7 @@
         <!---   Наша команда    -->
         <section class="team">
             <h2 class="team-h2">Наша команда</h2>
-            <ul class="team-list link">
+            <ul class="team-list list">
                 <li class="team-li "><img class="team-img" src="./images/img3.jpg" width="270" height="260"
                         alt="Игорь Демьяненко">
                     <h3 class="team-h3">Игорь Демьяненко</h3>
