--- a/portfolio.html
+++ b/portfolio.html
@@ -23,24 +23,24 @@
             <li><a href="index.html" class="header-link link">Контакты</a></li>
         </ul>
         <ul class="header-list2 list">
-            <li><a href="mailto:info@devstudio.com" class="header-link link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="header-link link">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="header-link2 link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="header-link2 link">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
     <main>
 
-        <!-- Клавиши ориентации -->
-        <ul class="nav-list list">
-            <li><button class="nav-btn btn" type="button">Все</button></li>
-            <li><button class="nav-btn btn" type="button">Веб-сайты</button></li>
-            <li><button class="nav-btn btn" type="button">Приложения</button></li>
-            <li><button class="nav-btn btn" type="button">Дизайн</button></li>
-            <li><button class="nav-btn btn" type="button">Маркетинг</button></li>
-        </ul>
+        
 
         <!-- Главный контент -->
         <section class="maincontant">
+            <ul class="nav-list list">
+                <li><button class="nav-btn btn" type="button">Все</button></li>
+                <li><button class="nav-btn btn" type="button">Веб-сайты</button></li>
+                <li><button class="nav-btn btn" type="button">Приложения</button></li>
+                <li><button class="nav-btn btn" type="button">Дизайн</button></li>
+                <li><button class="nav-btn btn" type="button">Маркетинг</button></li>
+            </ul>
             <ul class="maincontant-list list">
                 <li class="maincontant-li ">
                     <img class="maincontant-img" src="./images/pcr.jpg" alt="Ноутбук" width="370" height="294">
