--- a/portfolio.html
+++ b/portfolio.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">   
 </head>
 
 <body>
 
     <!---   Хедер   -->
     <header class="header">
-        <a class="logo link" href="index.html">Web<a class="logo-header-studio link" href="index.html">Studio</a></a>
+        <a class="logo link" href="index.html">Web</a><a class="logo-header-studio link" href="index.html">Studio</a>
         <ul class="header-list list">
             <li><a href="index.html" class="header-link link">Студия</a></li>
             <li><a href="portfolio.html" class="header-link link">Портфолио</a></li>
@@ -94,7 +94,7 @@
     </main>
     <!---   Футер    -->
     <footer class="footer">
-        <a href="index.html" class="logo link">Web<a class="logo-footer-studio link" href="index.html">Studio</a></a>
+        <a href="index.html" class="logo link">Web</a><a class="logo-footer-studio link" href="index.html">Studio</a>
         <address class="footer-address">
             <ul class="footer-list list">
                 <li><a class="footer-location link"
